# OceanSim

./: CMakeLists.txt  LICENSE  README.md  config.json
include/: camera.hpp  mesh.hpp  oceanConfig.hpp  oceanManager.hpp  shader.hpp  window.hpp
shaders/: base.frag  base.vert
src/: gerstnerWave.cpp  main.cpp  mesh.cpp  oceanManager.cpp  shader.cpp  window.cpp
